# weiroll-py

./: .gitignore  README.md  brownie-config.yaml  pyproject.toml  requirements.txt  weiroll.py
.github/workflows/: lint.yaml  test.yaml
contracts/: CommandBuilder.sol  VM.sol
contracts/Helpers/: RouterLike.sol  TupleHelper.sol  UniswapV3Helper.sol
contracts/Libraries/UniswapV3/: TickMath.sol
contracts/test/: SubPlanTests.sol  TestContract.sol  TestableVMWithMath.sol
scripts/: example.py
tests/: conftest.py  test_chaining_actions.py  test_curve_add_liquidity.py  test_dyn.py  test_helpers.py  test_lp.py  test_one_inch.py  test_swaps.py  test_weiroll.py  test_weiroll_local.py
